gcc/testsuite/rust/rustc/ui/error-codes/E0227.rs
trait Foo<'foo>: 'foo {}
trait Bar<'bar>: 'bar {}

trait FooBar<'foo, 'bar>: Foo<'foo> + Bar<'bar> {}

struct Baz<'foo, 'bar> {
    baz: dyn FooBar<'foo, 'bar>,
// { dg-error ".E0227." "" { target *-*-* } .-1 }
}

fn main() {}

